# oop

./: CMakeLists.txt
aud2/: email.cpp  employee.cpp  triangle.cpp
aud4/: ekipa.cpp
kol1/: 5gitara.cpp  IceCreamRes.cpp  StockRecord.cpp  ebook.cpp  iceCream.cpp  iceCream2.cpp  iceCream2txt  list.cpp  patnik.cpp  pesna.cpp  pica.cpp  pica1.cpp  pizza.cpp  ucesnik.cpp  zhicara.cpp
kol2/: 10.cpp  12.cpp  16.cpp  2.cpp  3.cpp  4.cpp  6.cpp  7.cpp  8.cpp  9.cpp  av.hotel.cpp  av10.cpp  datoteki.cpp
lab1.1/: prva_zadaca.cpp  treta_zadaca.cpp  vtora_zadaca.cpp
lab2.2021/: agol.cpp  krug.cpp
labs2024/: 8.1.cpp  8.2.cpp
labs2024/lab1/: engine.cpp  footbal.cpp  transaction.cpp
labs2024/lab3/: Achievement.cpp  spaceObject.cpp
vezbi/: array.cpp  dropka.cpp  word.cpp
