cmake_minimum_required(VERSION 3.23)
project(oop)

set(CMAKE_CXX_STANDARD 14)

add_executable(oop1 aud2/triangle.cpp)
add_executable(oop aud2/employee.cpp)
add_executable(email aud2/email.cpp)
add_executable(agol lab2.2021/agol.cpp)
add_executable(krug lab2.2021/krug.cpp)
add_executable(transaction labs2024/lab1/transaction.cpp)
add_executable(engine labs2024/lab1/engine.cpp)
add_executable(footbal labs2024/lab1/footbal.cpp)
add_executable(list kol1/list.cpp)
add_executable(abc lab1.1/prva_zadaca.cpp)
add_executable(abd lab1.1/vtora_zadaca.cpp)
add_executable(abe lab1.1/treta_zadaca.cpp)
add_executable(alien labs2024/lab3/spaceObject.cpp)
add_executable(ach labs2024/lab3/Achievement.cpp)
add_executable(dropka vezbi/dropka.cpp)
add_executable(arr vezbi/array.cpp)
add_executable(ek aud4/ekipa.cpp)
add_executable(p kol1/pesna.cpp)
add_executable(pp kol1/StockRecord.cpp)
add_executable(q vezbi/word.cpp)
add_executable(qs kol1/ucesnik.cpp)
add_executable(pica kol1/pica.cpp)
add_executable(pizza kol1/pizza.cpp)
add_executable(ebook kol1/ebook.cpp)
add_executable(dp kol1/deliveryPerson.cpp)
add_executable(patnik kol1/patnik.cpp)
add_executable(git kol1/5gitara.cpp)
add_executable(c kol1/iceCream.cpp)
add_executable(z kol1/zhicara.cpp)
add_executable(i kol1/iceCream2.cpp)
add_executable(is kol1/IceCreamRes.cpp)
add_executable(ppp kol1/pica1.cpp)
add_executable(vozac kol2/2.cpp)
add_executable(av.hotel kol2/av.hotel.cpp)
add_executable(hero labs2024/8.1.cpp)
add_executable(athlete labs2024/8.2.cpp)
add_executable(pz kol2/4.cpp)
add_executable(oglas kol2/10.cpp)
add_executable(phone kol2/12.cpp)
add_executable(vehicle kol2/av10.cpp)
add_executable(karticka kol2/7.cpp)
add_executable(datoteki kol2/datoteki.cpp)
add_executable(16 kol2/16.cpp)
add_executable(3 kol2/3.cpp)
add_executable(8 kol2/8.cpp)
add_executable(9 kol2/9.cpp)
add_executable(6 kol2/6.cpp)




















